--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
+*,
+*::before,
+*::after {
+    @apply transition-all duration-300;
+}
+
 :root {
-/*  --background: #ffffff; */
+  --background: #DBDBDB; 
   --foreground: #171717;
 }
 
@@ -17,5 +25,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Inter', sans-serif;
 }
