--- a/app/globals.css
+++ b/app/globals.css
@@ -93,32 +93,17 @@ layer(base);
   }
 }
 
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
-  }
-}
 
 *,
 *::before,
 *::after {
-  @apply transition-all duration-300;
+ @apply transition-all duration-150;
+ box-sizing: border-box;
 }
 
+
 :root {
-  --background: #dbdbdb;
+  --background: var( --color-prime-50);
   --foreground: #171717;
 }
 
